--- a/project.html
+++ b/project.html
@@ -171,7 +171,7 @@ window.addEventListener('scroll', function(event) { // To listen for event
                     <div class="panel-heading" role="tab" id="headingOne">
                         <h4 class="panel-title">
                             <button type="button" class="btn" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                <span>1</span>
+                                <span></span>
                                 Life and career
                             </button>
                         </h4>
@@ -186,7 +186,7 @@ window.addEventListener('scroll', function(event) { // To listen for event
                     <div class="panel-heading" role="tab" id="headingTwo">
                         <h4 class="panel-title">
                             <button type="button" class="btn" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                <span>2</span>
+                                <span></span>
                                 Musical style
                             </button>
                         </h4>
@@ -201,7 +201,7 @@ window.addEventListener('scroll', function(event) { // To listen for event
                     <div class="panel-heading" role="tab" id="headingThree">
                         <h4 class="panel-title">
                             <button type="button" class="btn" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                <span>3</span>
+                                <span></span>
                                 Awards and achievements
                             </button>
                         </h4>
@@ -222,12 +222,12 @@ window.addEventListener('scroll', function(event) { // To listen for event
       
     </section>
     <section id="mv">
-      <div class="container-fluid wow bounceInUp">
+      <div class="container-fluid wow fadeInUpBig">
         <div class="text-center">
           <br>
-      <h3 class="container-fluid wow fadeInRight ">Best music video</h3>
+      <h3 class="container-fluid wow fadeInRightBig ">Best music video</h3>
       <hr style="width: 22px; border: 1px solid #18d26e ">
-      <p class=" wow fadeInLeft ">
+      <p class=" wow fadeInLeftBig ">
 She is one of the best music video makers</p>
     </div>
         <div class="container">
@@ -685,7 +685,7 @@ Great songs come from great albums</p>
     <br>
     <div class="container">
       <div class="row">
-          <div class="col-12 col-sm-4 col-md-4 wow bounceInLeft txt">
+          <div class="col-12 col-sm-4 col-md-4 wow fadeInLeftBig txt">
             <div class="text-center">
             <h2>&#9834;Wildest Dream&#9834;</h2>
             <p>One of the best songs</p>
@@ -695,7 +695,7 @@ Great songs come from great albums</p>
         <button type="button" class="btn btn-light"><a href="https://open.spotify.com/album/34OkZVpuzBa9y40DCy0LPR?highlight=spotify:track:106R7Z57WYzBAfrXImV30y#_=_"><i class=" spo fa fa-spotify" aria-hidden="true"></i></a></button>
         </div>
           </div>
-          <div class="col-12 col-sm-8 col-md-8 wow bounceInRight">
+          <div class="col-12 col-sm-8 col-md-8 wow fadeInRightBig">
             <img src="images/wl.jpg" class="wd" alt="">
           </div>
       </div>
@@ -714,7 +714,7 @@ She is one of the most awarded artists of all time</p>
 </div>
   <div class="row">
   <div class="col-8 mx-auto">
-  <img src="images/gry.jpg" class="wd gr" alt="">
+  <img src="images/gry.jpg" class="wd gr wow fadeInLeftBig" alt="">
   </div>
 </div>
     <div id="counter" class="row text-center">
@@ -742,12 +742,12 @@ She is one of the most awarded artists of all time</p>
   <div class="col-12">
 <div class="title">All</div>
 <div class="content col-12">
-   <img src="images/amas.jpg" class="hinh all type1">
-   <img src="images/amas2019.jpg" class="hinh all type1">
-   <img src="images/billbroad.jpg" class="hinh all type2">
-   <img src="images/bill.jpeg" class="hinh all type2">
-   <img src="images/vma.jpg" class="hinh all type3">
-   <img src="images/grammy.jpg" class="hinh all type4">
+   <img src="images/amas.jpg" class="wow flipInY hinh all type1">
+   <img src="images/amas2019.jpg" class="wow flipInY hinh all type1">
+   <img src="images/billbroad.jpg" class="wow flipInY hinh all type2">
+   <img src="images/bill.jpeg" class="wow flipInY hinh all type2">
+   <img src="images/vma.jpg" class="wow flipInY hinh all type3">
+   <img src="images/grammy.jpg" class="wow flipInY hinh all type4">
 </div>
 </div>
 </div>
@@ -774,7 +774,7 @@ I am honored to be featured in Taylor's songs. I don't care about tabloids.
     <div class="container">
       <div class="row">
         <div class="col col-12 col-sm-6 col-lg-3">
-      <figure class="snip1401">
+      <figure class="wow flip snip1401">
   <img src="images/ladyagag.jpg" alt="sample67" />
   <figcaption>
     <h3>Lady Gaga</h3>
@@ -785,7 +785,7 @@ I am honored to be featured in Taylor's songs. I don't care about tabloids.
 </figure>
 </div>
 <div class="col col-12 col-sm-6 col-lg-3">
-<figure class="snip1401"><img src="images/katy.jpg" alt="sample87" />
+<figure class="wow flip snip1401"><img src="images/katy.jpg" alt="sample87" />
   <figcaption>
     <h3>Katy Pery</h3>
     <p>Main pop girl 2010s</p>
@@ -795,7 +795,7 @@ I am honored to be featured in Taylor's songs. I don't care about tabloids.
 </figure>
 </div>
 <div class="col col-12 col-sm-6 col-lg-3">
-<figure class="snip1401"><img src="images/adele.jpg" alt="sample87" />
+<figure class="wow flip snip1401"><img src="images/adele.jpg" alt="sample87" />
   <figcaption>
     <h3>Adele</h3>
     <p>Main pop girl 2010s</p>
@@ -805,7 +805,7 @@ I am honored to be featured in Taylor's songs. I don't care about tabloids.
 </figure>
 </div>
 <div class="col col-12 col-sm-6 col-lg-3">
-<figure class="snip1401"><img src="images/rihanna.jpg" alt="sample87" />
+<figure class="wow flip snip1401"><img src="images/rihanna.jpg" alt="sample87" />
   <figcaption>
     <h3>Rihanna</h3>
     <p>Main pop girl 2010s</p>
@@ -822,7 +822,7 @@ I am honored to be featured in Taylor's songs. I don't care about tabloids.
    <div class="container">
      <div class="text-center">
       <br>
-      <h1 class="container wow bounceInDown">Contact</h1>
+      <h1 class="container wow fadeInDownBig">Contact</h1>
       <hr style="width: 22px; border: 1px solid #18d26e ">
       </div>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52871.82171356648!2d-118.43455352342345!3d34.08261502183426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bc04d6d147ab%3A0xd6c7c379fd081ed1!2sBeverly%20Hills%2C%20California%2C%20Hoa%20K%E1%BB%B3!5e0!3m2!1svi!2s!4v1604238857688!5m2!1svi!2s" width="100%" height="320" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
