--- a/project.html
+++ b/project.html
@@ -787,7 +787,7 @@ I am honored to be featured in Taylor's songs. I don't care about tabloids.
 <div class="col col-12 col-sm-6 col-lg-3">
 <figure class="wow flip snip1401"><img src="images/katy.jpg" alt="sample87" />
   <figcaption>
-    <h3>Katy Pery</h3>
+    <h3>Katy Perry</h3>
     <p>Main pop girl 2010s</p>
     <span><i style="color: #3b5998" class="fa fa-facebook-square" aria-hidden="true"></i><i style="color: #55acee" class="fa fa-twitter-square" aria-hidden="true"></i><i style="color: #00405d" class="fa fa-tumblr-square" aria-hidden="true"></i></span>
   </figcaption>
